--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -183,7 +183,6 @@ SubjArousalView_aov <- afex::aov_ez(data = Ratings_view,
 
 # compute posthoc tests for within measures
 SubjArousalView_emm <- emmeans::emmeans(SubjArousalView_aov$aov, specs = "block")
-#pairs(posthoc_arousalView, adjust = "bonferroni")
 
 SubjArousalView_con <- as.data.frame(pairs(SubjArousalView_emm, adjust = "bonferroni"))
 
@@ -192,7 +191,8 @@ SubjArousalView_BF <- BayesFactor::anovaBF(formula = arousal ~ block,
                                            data = Ratings_view,
                                            progress = FALSE)
 SubjArousalView_con$BF10 <- BayesFactor::extractBF(BayesFactor::ttestBF(x = Ratings_view$arousal[Ratings_view$block == "view_neu"],
-                                                                        y = Ratings_view$arousal[Ratings_view$block == "view_neg"]))
+                                                                        y = Ratings_view$arousal[Ratings_view$block == "view_neg"],
+                                                                        progress = FALSE, paired = TRUE))$bf
 
 # Figure to visualize arousal ratings
 
@@ -207,21 +207,46 @@ FigPilot1=ggplot2::ggplot(arousal_view, aes(x = block, y = arousal))+
 
 # View neg and regulate conditions 
 
-arousal_reg = data_ER %>%
+Ratings_reg <- data_ER %>%
   subset(data_ER$block != "view_neu" & data_ER$block != "choice")
+Ratings_reg$block <- as.factor(Ratings_reg$block)
 
 
-aov_arousalReg = afex::aov_ez(data = arousal_reg,
+SubjArousalReg_aov <- afex::aov_ez(data = arousal_reg,
                               id = "ID",
                               dv = "arousal",
                               within = "block",
                               fun_aggregate = mean,
                               include_aov = TRUE)
-#afex::nice(aov_arousalReg, es = "pes")
 
 # compute posthoc tests for within measures
-posthoc_arousalReg = emmeans::emmeans(aov_arousalReg$aov, specs = "block")
-#pairs(posthoc_arousalReg, adjust = "bonferroni")
+SubjArousalReg_emm <- emmeans::emmeans(SubjArousalReg_aov$aov, specs = "block")
+
+SubjArousalReg_con <- as.data.frame(pairs(SubjArousalReg_emm, adjust = "bonferroni"))
+
+# Bayes Factors
+SubjArousalView_BF <- BayesFactor::anovaBF(formula = arousal ~ block,
+                                           data = Ratings_reg,
+                                           progress = FALSE)
+
+SubjArousalReg_con$BF10 <- c(BayesFactor::extractBF(BayesFactor::ttestBF(x = Ratings_reg$arousal[Ratings_reg$block == "view_neg"],
+                                                                         y = Ratings_reg$arousal[Ratings_reg$block == "distraction"],
+                                                                         progress = FALSE, paired = TRUE))$bf,
+                             BayesFactor::extractBF(BayesFactor::ttestBF(x = Ratings_reg$arousal[Ratings_reg$block == "view_neg"],
+                                                                         y = Ratings_reg$arousal[Ratings_reg$block == "distancing"],
+                                                                         progress = FALSE, paired = TRUE))$bf,
+                             BayesFactor::extractBF(BayesFactor::ttestBF(x = Ratings_reg$arousal[Ratings_reg$block == "view_neg"],
+                                                                         y = Ratings_reg$arousal[Ratings_reg$block == "suppression"],
+                                                                         progress = FALSE, paired = TRUE))$bf,
+                             BayesFactor::extractBF(BayesFactor::ttestBF(x = Ratings_reg$arousal[Ratings_reg$block == "distraction"],
+                                                                         y = Ratings_reg$arousal[Ratings_reg$block == "distancing"],
+                                                                         progress = FALSE, paired = TRUE))$bf,
+                             BayesFactor::extractBF(BayesFactor::ttestBF(x = Ratings_reg$arousal[Ratings_reg$block == "distraction"],
+                                                                         y = Ratings_reg$arousal[Ratings_reg$block == "suppression"],
+                                                                         progress = FALSE, paired = TRUE))$bf,
+                             BayesFactor::extractBF(BayesFactor::ttestBF(x = Ratings_reg$arousal[Ratings_reg$block == "distancing"],
+                                                                         y = Ratings_reg$arousal[Ratings_reg$block == "suppression"],
+                                                                         progress = FALSE, paired = TRUE))$bf)
 
 # Figure to visualize arousal ratings
 
